--- a/sympliapi/appsettings.json
+++ b/sympliapi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "RedisConnection": "symplisearchcache.redis.cache.windows.net:6380,password=QkpFNvEI1s8EI04HA9m12cUKdEnxCjwpXKShob17JGU=,ssl=True,abortConnect=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
