cache provider refactorings

--- a/sympliapi/appsettings.Development.json
+++ b/sympliapi/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "RedisConnection": "symplisearchcache.redis.cache.windows.net:6380,password=QkpFNvEI1s8EI04HA9m12cUKdEnxCjwpXKShob17JGU=,ssl=True,abortConnect=False"
   },
+  "CacheExpirationTimespan": "00:60:00",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
